# fedora-compose-differ

./: .gitignore  LICENSE  README.md  logging.conf  pyproject.toml  requirements.txt
compose_diff/: __main__.py  compose_diff_utils.py  utils.py
tests/: test_utils.py
tests/testdata/: compose_rawhide_index.html  sample_rpms.json
