[project]
name = "compose_diff"
version = "1.0.0"
description = "Fedora Rawhide compose differ"
readme = "README.md"


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "."
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
