[project]
name = "compose_diff"
version = "1.0.0"
description = "Fedora Rawhide compose differ"
readme = "README.md"
authors = [
    { name = "Jaroslav Groman", email = "jgroman@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = ["ijson", "pydantic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jgroman/fedora-compose-differ"
Issues = "https://github.com/jgroman/fedora-compose-differ/issues"

[project.scripts]
compose_diff = "compose_diff.__main__:main"

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "."
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)s] %(filename)s,%(lineno)d: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
